# auth-service

./: .env  .gitignore  .~lock.Tickets.ods#  CMakeCache.txt  CMakeLists.txt  Makefile  Tickets.ods  cmake_install.cmake  cplusplus  docker-compose.yml  main.cpp
Dockerfiles/: Dockerfile  DockerfileCPP
constants/auth/: Auth.cpp  Auth.h
constants/db/: DBConstants.hpp
constants/entities/: Entities.cpp  Entities.h
constants/env/: Env.cpp  Env.h
constants/http/: Http.cpp  Http.h  HttpConstants.hpp  Methods.h
constants/http/methods/: Methods.cpp  Methods.h
constants/http/responseCodes/: ResponseCodes.cpp  ResponseCodes.h
constants/routes/: Routes.cpp  Routes.h
database/: DBConnection.cpp  DBConnection.h
database/helpers/: describe_tables.sql
database/migrations/: 2. update-users-table.sql  3. create-auth-credentials-local-table.sql  4. update-users-table add column authType.sql  5. add-foreign-key-jwt-auth-table.sql  create-users-table.sql
models/Auth/: Auth.cpp  Auth.h
models/Auth/jwt/: JWTAuth.cpp  JWTAuth.h
models/Auth/jwt/entity/: JWTAuthEntity.cpp  JWTAuthEntity.h
models/User/: User.cpp  User.h
server/: IRequestHandler.h  Server.cpp  Server.h
server/router/: Router.cpp  Router.h
services/user/: UserDTO.cpp  UserDTO.h  UserRepository.cpp  UserRepository.h
topics/pointers/: Pointer.cpp  Pointer.h
